# openstereo

./: CMakeLists.txt  package.xml
config/: left_stereo_dist.csv  right_stereo_dist.csv  right_stereo_mtx.csv
include/: PreAllocator.h
launch/: stereocam.launch
src/: stereocam.py  stereocam_node.cpp
src/calib/: R.csv  T.csv  calib.py  calibstereo.py  left_dist.csv  left_mtx.csv  left_stereo_mtx.csv  out.txt  right_dist.csv  right_mtx.csv  take.py  takesingle.py
